[package]
name = "loose-sqlparser-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/squill-app/loose-sqlparser-wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
loose-sqlparser = { version = "0.3", git = "https://github.com/squill-app/loose-sqlparser-rs", branch = "main", features = ["serialize"] }