[package]
name = "loose-sqlparser-wasm"
version = "0.1.6"
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/squill-app/loose-sqlparser-wasm"
description = "A wasm wrapper for the loose-sqlparser crate"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
loose-sqlparser = { version = "0.3", git = "https://github.com/squill-app/loose-sqlparser-rs", branch = "main", features = [
  "serialize",
] }
